# igwn-auth-utils

./: .appveyor.yml  .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yml  README.md  igwn-auth-utils.spec  pyproject.toml  setup.cfg  setup.py
.github/workflows/: packaging.yml  test.yml
.gitlab/ci/: analysis.yml  debian.yml  docs.yml  rhel.yml  test.yml
debian/: changelog  control
docs/: conf.py  index.rst
igwn_auth_utils/: __init__.py  error.py  kerberos.py  requests.py  scitokens.py  x509.py
igwn_auth_utils/tests/: __init__.py  conftest.py  test_requests.py  test_scitokens.py  test_x509.py
rpm/: python-igwn-auth-utils.spec
