[build-system]
requires = [
  "setuptools>=69.3.0",
  "setuptools_scm[toml]>=3.4.3",
  "wheel",
]
build-backend = "setuptools.build_meta"

# -- coverage.py

[tool.coverage.paths]
# map standard install paths back to the source to
# enable merging coverage of installed module from
# multiple platforms
source = [
  "igwn_auth_utils/",  # <-- source path, must come first
  "*/igwn_auth_utils/",  # <-- any installed path
]

[tool.coverage.report]
omit = [
  "*/_version.py",
]
# print report with one decimal point
precision = 1

# -- pytest

[tool.pytest.ini_options]
addopts = "-r a --color=yes"
filterwarnings = [
  "error",
  # https://github.com/pyreadline/pyreadline/issues/65
  "ignore:Using or importing the ABCs::pyreadline",
  # ignore pkg_resources deprecation
  "ignore:.*pkg_resources.*",
]

# -- setuptools-scm

[tool.setuptools_scm]
write_to = "igwn_auth_utils/_version.py"
