[metadata]
name = igwn-auth-utils
version = attr: igwn_auth_utils.__version__
author = Duncan Macleod
maintainer = Duncan Macleod
maintainer_email = duncan.macleod@ligo.org
description = Authorisation utilities for IGWN
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
url = https://github.com/duncanmmacleod/igwn-auth-utils
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Science/Research
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics
project_urls =
	Bug Tracker = https://github.com/duncanmmacleod/igwn-auth-utils/issues/
	Source Code = https://github.com/duncanmmacleod/igwn-auth-utils.git

[options]
packages = find:
python_requires = >=3.6
setup_requires =
	setuptools >= 38.2.5
install_requires =
	cryptography
	scitokens

[options.extras_require]
test =
	pytest >= 2.9.0
	pytest-cov

# -- tools ------------------

[flake8]
select =
	E,
	F,
	W,
ignore =
	W503,
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	docs/,
	venv/,
per-file-ignores =
	__init__.py:F401
